   Branch 'debian' is from http://savannah.nongnu.org/cvs/?group=qhull
   project/debian needs updating for its new location.

To do
 - Review email for doc changes
 - RMP build of Qhull
 - Create signed tags for Qhull versions
 - Add FIXUP for known problems and update wiki
 - Notes to compgeom on conformant triangulation and Voronoi volume

------------
gitorious.org/qhull 2010/03/14
- Fixed bug reported by renangms.  Vertex output throws error QH10034
  and defineVertexNeighbors() does not exist.
- Add Qhull::defineVertexFacetNeighbors() for facetNeighbors of vertices.
  Automatically called for facet merging and Voronoi diagrams
  Do not print QhullVertex::facetNeighbors is !facetNeighborsDefined()
- Fixed type of vertex->neighbors in qh_printvoronoi [no effect on results]
- Removed unnecessary if statement in qh_printvoronoi
- index.htm: Add Google Scholar references

------------
gitorious.org/qhull 2010/01/25
- Fixed src/CMakeLists.txt [M. Moll]
- qh-optf.htm: Add note about order of 'Fn' matching 'Fv' order [Q. Pan]
- Add .gitignore with ignored files and directories.  
-   Use .git/info/exclude for locally excluded files.

------------
gitorious.org/qhull 2010/01/23
- Reviewed all copy constructors and copy assignments.  Updated comments.
   Defined Qhull copy constructor and copy assignment [G. Rivet-Sabourin]
   Disabled UsingQhullLib default constructor, copy construct, and copy assign 
- Add #error to Qhull.h if qh_QHpointer is not defined
- Define MSG_QHULL_ERROR in user.h
- Move MSG_FIXUP to 11000 and updated FIXUP QH11...
- Add patch for old builds in qh-get.htm
- Add eg/q_test to libqhull.pro
  Add note to q_test than R1e-3 may error (qh-code.htm, Enhancements)
- Added C++ compiling instructions to README.txt
  Add instructions for fixing the DOS window
- Updated CMakeLists.txt to compile shared and static libraries and link the 
   command line utilities to the shared one.  Allows install of 
   targets, libqhull.h, and html docs.  [M. Moll]